syntax = "proto3";

package v1;
option go_package = "./v1;v1";
import "google/api/annotations.proto";
import "validate/validate.proto";

message File{
  uint32 id = 11;
  uint32 directory_id = 1;
  string name = 2;
  string type = 3;
  uint32 size = 4;
  string sha = 5;
  string src = 6;
  string storage = 9;
  uint32 created_at = 10;
}

message PrepareUploadFileRequest{
    uint32 directory_id = 1;
    string directory_path = 2;
    string app = 3[(validate.rules).string = {min_len:1}];
    string name = 4[(validate.rules).string = {min_len:1}];
    string sha = 5[(validate.rules).string = {min_len:1}];
    uint32 size = 6[(validate.rules).uint32 = {gt:0}];
}

message PrepareUploadFileReply{
  optional bool uploaded = 1;
  optional string src = 2;
  optional uint32 chunk_size = 3;
  optional uint32 chunk_count = 4;
  optional string upload_id = 5;
  repeated uint32 upload_chunks = 6;
  optional string sha = 7;
}

message PageFileRequest{
  uint32 directory_id = 1[(validate.rules).uint32 = {gt:0}];
  string app = 2[(validate.rules).string = {min_len:1}];
  optional string name = 3;
  uint32 page = 4[(validate.rules).uint32 = {gt:0}];
  uint32 page_size = 5[(validate.rules).uint32 = {gt:0,lte:100}];
}

message PageFileReply{
  repeated File list = 1;
  optional uint32 total = 2;
}


message UpdateFileRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
  string app = 2[(validate.rules).string = {min_len:1}];
  string name = 3[(validate.rules).string = {min_len:1}];
  uint32 directory_id = 4[(validate.rules).uint32 = {gt:0}];
}

message DeleteFileRequest{
  repeated uint32 ids = 1[(validate.rules).repeated = {min_items:1}];
  string app = 2[(validate.rules).string = {min_len:1}];
  uint32 directory_id = 3[(validate.rules).uint32 = {gt:0}];
}

message UploadFileRequest{
  string data = 1[(validate.rules).string = {min_len:0}];
  string upload_id = 2[(validate.rules).string = {min_len:1}];
  uint32 index = 3[(validate.rules).uint32 = {gt:0}];;
}

message UploadFileReply{
  string src = 1;
  string sha = 2;
}
